Fix dark mode pre tags. Closes https://github.com/owncast/owncast/issues/394

--- a/web/styles/globals.scss
+++ b/web/styles/globals.scss
@@ -41,4 +41,8 @@ pre {
 
 @media (prefers-color-scheme: dark) {
   @import "~antd/dist/antd.dark";
+  pre {
+    background-color: rgb(44, 44, 44);
+    color:lightgrey;
+  }
 }
